--- a/appointa/index.html
+++ b/appointa/index.html
@@ -625,8 +625,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">"Discover the
-                    opportunity to improve the interview scheduling experience for recruiting team"
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Discover the
+                    opportunity to improve the interview scheduling experience for recruiting team
                   </p>
 
                 </div>
@@ -1612,7 +1612,9 @@
         <div class="Grid-cell">
           <div class="element">
             <div class="element">
-              <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to ensure recruiters check interview team availability and schedule interviews for both parties easily and quickly.</p>
+              <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch
+                is to ensure recruiters check interview team availability and schedule interviews
+                for both parties easily and quickly.</p>
             </div>
           </div>
         </div>
@@ -1714,184 +1716,44 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduleInterview.svg"
-                  alt="Log in or sign up">
+                <img class="shadowFilter modal-target"
+                  src="userflow_Recruiter_scheduleInterview.svg" alt="Log in or sign up">
               </div>
             </div>
           </div>
 
 
           <div class="blankHXS"></div>
-
-
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
-                  <h4>
-
-                    <p> <strong>Goal of the testing</strong></p>
-                    <ul>
-                      <li> Does the design solve the problem? </li>
-                      <li> Is it easy to schedule an interview than before? </li>
-
-                    </ul>
-                    <p> <strong>Test with potential users</strong></p>
-                    <ul>
-                      <li> Test each flow separately </li>
-                      <li> Test the all flows together </li>
-                    </ul>
-                    <p> <strong>Insights from testing</strong></p>
-                    <ul>
-                      <li> A way to share a link with everyone in the company instead of entering all emails in the small box </li>
-                      <li> Add skill to a single member on the table </li>
-                      <li> Ability to manage interview skills </li>
-                      <li> The interview may include multiple interviewers </li>
-
-                    </ul>
-                  </h4>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-
-
-          <div class="blankHS"></div>
-
-
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
-                    wireframes can be a helpful tool for evaluating the user experience of a
-                    proposed design.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell">
-              <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
-              <div class="blankHXS"></div>
-
-              <h3>Administration account</h3>
-              <h6>Recruiters &#47; Hiring managers</h6>
-            </div>
-          </div>
-          <div class="Grid Grid--full wrapper">
-
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
-                  <h4>
-                    <p> <strong>Recruiter account</strong> </p>
-                    <p>Some user wants to <strong class="textDecor APPOINTA">import</strong>
-                      candidate skills from a <strong
-                        class="textDecor APPOINTA">spreadsheet</strong></p>
-                    <p> Most time, recruiters schedule interviews for
-                      candidates, it is better to have the ability to let recruiters schedule
-                      interviews
-                      in their account </p>
-                  </h4>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
         </div>
-        <!-- admin -->
-        <div class="blankHM"></div>
 
-        <!-- members -->
 
-        <div class="blankHS"></div>
-        <div class="Grid Grid--full u-textCenter">
+        <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <img class="iconM" src="ppl_teammember.png" alt="members account">
-            <div class="blankHXS"></div>
+            <div class="element">
+              <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
+                <h4>
 
-            <h3>Team member account</h3>
-            <h6>Engineers, designers, marketing and sales, etc.</h6>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Step 1: open link </h3>
-              </div>
-            </div>
-          </div>
+                  <p> <strong>Goal of the testing</strong></p>
+                  <ul>
+                    <li> Does the design solve the problem? </li>
+                    <li> Is it easy to schedule an interview than before? </li>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Member_signup.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Sign up with invite link</li>
-                  <li>Sign up with email invitation</li>
-                </ul>
-              </div>
-            </div>
+                  </ul>
+                  <p> <strong>Test with potential users</strong></p>
+                  <ul>
+                    <li> Test each flow separately </li>
+                    <li> Test the all flows together </li>
+                  </ul>
+                  <p> <strong>Insights from testing</strong></p>
+                  <ul>
+                    <li> A way to share a link with everyone in the company instead of entering all
+                      emails in the small box </li>
+                    <li> Add skill to a single member on the table </li>
+                    <li> Ability to manage interview skills </li>
+                    <li> The interview may include multiple interviewers </li>
 
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingInviteLinks.gif"
-                  alt="New User">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blankHM"></div>
-
-
-        <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Step 2: create account </h3>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Member_onboarding.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Sync calendar</li>
-                  <li>Connect video conference</li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox"
-                  src="testingMemberOnboarding.gif" alt="New User">
+                  </ul>
+                </h4>
               </div>
             </div>
           </div>
@@ -1904,16 +1766,19 @@
         <div class="blankHS"></div>
 
 
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
+                  wireframes can be a helpful tool for evaluating the user experience of a
+                  proposed design.</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
-
-
-
-        <div class="blankHM"></div>
-
-
-
-        <!-- members -->
 
 
       </section>
