--- a/appointa/index.html
+++ b/appointa/index.html
@@ -449,8 +449,10 @@
             <li class=""><a href="#userFlow">User flow </a></li>
             <li class=""><a href="#informationArchitecture">Information architecture</a></li>
 
-            <li class=""><a href="#wireframes">Lo-fi sketch</a></li>
-            <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
+            <li class=""><a href="#sketch">Lo-fi sketch</a></li>
+            <li class=""><a href="#mfScreens">Mid-fi screen flow &#38; testing </a></li>
+            <li class=""><a href="#mfScreensUpdate">Mid-fi screen flow &#38; Iteration </a></li>
+
           </ul>
         </li>
         <li><a href="#deliver">Deliver</a>
@@ -1160,7 +1162,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="IconCalendarSearch.svg" alt="se-arrow">
+                    <img class="iconM" src="IconFolder.svg" alt="se-arrow">
                     <div class="blankHXS"></div>
                     <h4> <strong> Efficiency</strong> </h4>
 
@@ -1191,7 +1193,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconCheck.svg" alt="se-arrow">
+                    <img class="iconM" src="IconCategory.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
                     <h4> <strong> Optimization</strong> </h4>
@@ -1222,7 +1224,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="IconCalendar.svg" alt="se-arrow">
+                    <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
 
@@ -1238,7 +1240,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconRepeat.svg" alt="se-arrow">
+                    <img class="iconM" src="iconNotification.svg" alt="se-arrow">
                     <div class="blankHXS"></div>
 
                     <h4> <strong> Effectiveness</strong> </h4>
@@ -1581,7 +1583,7 @@
         <!-- Sitemap -->
       </section>
 
-      <section id="wireframes">
+      <section id="sketch">
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -1624,7 +1626,7 @@
 
       <div class="blankHS"></div>
 
-      <section id="mid-fiWireframes">
+      <section id="mfScreens">
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -1782,7 +1784,164 @@
 
 
       </section>
+      <section id="mfScreensUpdate">
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Mid-fi screen flows &#38; testing</p>
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <div class="wrapper">
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Invite team </h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_inviteTeam.svg" alt="Invite team">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagement.svg"
+                  alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
 
+          <div class="blankHS"></div>
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Join as team member</h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_memberJoin.svg" alt="Team member join">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Member_signup.svg"
+                  alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+
+          <div class="blankHS"></div>
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Create interview </h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_createInterview.svg" alt="Create interview">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
+                  alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+
+
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Schedule interview </h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_schedulingInterview.svg"
+                  alt="Schedule interview">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target"
+                  src="userflow_Recruiter_scheduleInterview.svg" alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+
+
+          <div class="blankHXS"></div>
+        </div>
+
+
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
+                <h4>
+
+                  <p> <strong>Goal of the testing</strong></p>
+                  <ul>
+                    <li> Does the design solve the problem? </li>
+                    <li> Is it easy to schedule an interview than before? </li>
+
+                  </ul>
+                  <p> <strong>Test with potential users</strong></p>
+                  <ul>
+                    <li> Test each flow separately </li>
+                    <li> Test the all flows together </li>
+                  </ul>
+                  <p> <strong>Insights from testing</strong></p>
+                  <ul>
+                    <li> A way to share a link with everyone in the company instead of entering all
+                      emails in the small box </li>
+                    <li> Add skill to a single member on the table </li>
+                    <li> Ability to manage interview skills </li>
+                    <li> The interview may include multiple interviewers </li>
+
+                  </ul>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+        <div class="blankHS"></div>
+
+
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
+                  wireframes can be a helpful tool for evaluating the user experience of a
+                  proposed design.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+      </section>
     </section>
     <div class="blankHS"></div>
     <section id="deliver">
@@ -2089,10 +2248,9 @@
 
                 <p> <strong>What went well so far&#58;</strong></p>
                 <ul>
-                  <li> <strong class="textDecor APPOINTA">Navigation</strong> needs to be more
+                  <li> Navigation needs to be more
                     straightforward </li>
-                  <li> Need to design the <strong class="textDecor APPOINTA">profile</strong>
-                    page
+                  <li> Need to design the profile page
                   </li>
 
                 </ul>
@@ -2100,13 +2258,9 @@
 
                 <p> <strong>Next step&#58;</strong></p>
                 <ul>
-                  <li> Recruiters may sometimes <strong class="textDecor APPOINTA">book
-                      interviews
-                      for condidates</strong> </li>
-                  <li> Ability to book <strong class="textDecor APPOINTA">a
-                      set of interviews</strong> </li>
-                  <li> May need to have <strong class="textDecor APPOINTA">interview
-                      groups</strong>for next version</li>
+                  <li> Recruiters may sometimes book interviews for condidates</li>
+                  <li> Ability to book a set of interviews</li>
+                  <li> May need to have interview groups for next version</li>
                   <li> team member bulk edit feature is not necessary for
                     the first version </li>
                 </ul>
