--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1429,7 +1429,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> 3 Persona Types</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -1748,9 +1748,10 @@
                   </ul>
                   <p> <strong>Insights from testing</strong></p>
                   <ul>
+                    <li>A better way to create on site interview</li>
                     <li> A way to share a link with everyone in the company instead of entering all
                       emails in the small box </li>
-                    <li> Add skill to a single member on the table </li>
+                    <li> Able to adjust each team member's skills from the table </li>
                     <li> Ability to manage interview skills </li>
                     <li> The interview may include multiple interviewers </li>
 
@@ -1760,7 +1761,6 @@
             </div>
           </div>
         </div>
-
 
 
 
@@ -1791,7 +1791,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Mid-fi screen flows &#38; testing</p>
+                  <p class="tArrow"> Mid-fi screen flows iteration</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -1814,7 +1814,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagement.svg"
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagementV2.svg"
                   alt="Log in or sign up">
               </div>
             </div>
@@ -1877,7 +1877,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="shadowFilter modal-target"
-                  src="userflow_Recruiter_scheduleInterview.svg" alt="Log in or sign up">
+                  src="userflow_Recruiter_scheduleInterviewV2.svg" alt="Log in or sign up">
               </div>
             </div>
           </div>
@@ -1887,39 +1887,29 @@
         </div>
 
 
+
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
               <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
                 <h4>
 
-                  <p> <strong>Goal of the testing</strong></p>
-                  <ul>
-                    <li> Does the design solve the problem? </li>
-                    <li> Is it easy to schedule an interview than before? </li>
-
-                  </ul>
-                  <p> <strong>Test with potential users</strong></p>
+     
+                  <p> <strong>Updated mid-fi screens based on the feedback from testing</strong></p>
                   <ul>
                     <li> Test each flow separately </li>
                     <li> Test the all flows together </li>
                   </ul>
-                  <p> <strong>Insights from testing</strong></p>
+                  <p> <strong>Insights from iteration</strong></p>
                   <ul>
-                    <li> A way to share a link with everyone in the company instead of entering all
-                      emails in the small box </li>
-                    <li> Add skill to a single member on the table </li>
-                    <li> Ability to manage interview skills </li>
-                    <li> The interview may include multiple interviewers </li>
-
+                    <li> A way to select a type of team member from interview team </li>
                   </ul>
                 </h4>
               </div>
             </div>
           </div>
         </div>
-
-
 
 
 
