--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1748,6 +1748,7 @@
                   </ul>
                   <p> <strong>Insights from testing</strong></p>
                   <ul>
+                    <li>Ability to manage recruiter or hiring manage account</li>
                     <li>A better way to create on site interview</li>
                     <li> A way to share a link with everyone in the company instead of entering all
                       emails in the small box </li>
@@ -1791,7 +1792,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Mid-fi screen flows iteration</p>
+                  <p class="tArrow"> Mid-fi screen iteration</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -1809,7 +1810,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img src="diagram_keyFlows_horizontal_inviteTeam.svg" alt="Invite team">
+                <img src="diagram_keyFlows_horizontal_inviteTeamV2.svg" alt="Invite team">
               </div>
             </div>
             <div class="Grid-cell">
@@ -1821,44 +1822,7 @@
           </div>
 
           <div class="blankHS"></div>
-          <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA">Join as team member</h3>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <img src="diagram_keyFlows_horizontal_memberJoin.svg" alt="Team member join">
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Member_signup.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
 
-          <div class="blankHS"></div>
-          <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA">Create interview </h3>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <img src="diagram_keyFlows_horizontal_createInterview.svg" alt="Create interview">
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
 
 
           <div class="blankHXS"></div>
@@ -1870,7 +1834,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img src="diagram_keyFlows_horizontal_schedulingInterview.svg"
+                <img src="diagram_keyFlows_horizontal_schedulingInterviewV2.svg"
                   alt="Schedule interview">
               </div>
             </div>
@@ -1898,8 +1862,8 @@
      
                   <p> <strong>Updated mid-fi screens based on the feedback from testing</strong></p>
                   <ul>
-                    <li> Test each flow separately </li>
-                    <li> Test the all flows together </li>
+                    <li> Allow user to select multiple interviewer</li>
+                    <li> Allow user invite members with link </li>
                   </ul>
                   <p> <strong>Insights from iteration</strong></p>
                   <ul>
