--- a/architecture/index.html
+++ b/architecture/index.html
@@ -450,15 +450,15 @@
           <img class="footer-logo" src="../icon/mail.svg" alt="email">
         </a>
 
-        <a href="https://www.linkedin.com/in/vicky-wyq/">
+        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
           <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
         </a>
 
-        <a href="https://github.com/vicky-wyq">
+        <a target="_blank" href="https://github.com/vicky-wyq">
           <img class="footer-logo" src="../icon/git.svg" alt="github">
         </a>
 
-        <a href="https://www.instagram.com/vw_yiqi/">
+        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
           <img class="footer-logo" src="../icon/ins.svg" alt="medium">
         </a>
       </div>
