--- a/photography/index.html
+++ b/photography/index.html
@@ -200,7 +200,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class=" ShadowBox">
             <img src="./01.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -214,7 +214,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./02.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -245,7 +245,7 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./15.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -269,7 +269,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./05.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -283,7 +283,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./06.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -306,7 +306,7 @@
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./20.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Animal</h5>
@@ -328,7 +328,7 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./07.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -351,7 +351,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./09.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -365,7 +365,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./08.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -388,7 +388,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./11.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -402,7 +402,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./12.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -425,7 +425,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./13.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -439,7 +439,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./14.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -463,7 +463,7 @@
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./19.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -486,7 +486,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./17.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -500,7 +500,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./16.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -523,7 +523,7 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./03.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -546,7 +546,7 @@
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./04.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
@@ -569,7 +569,7 @@
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
         <div class="element">
-          <div class="float ShadowBox">
+          <div class="ShadowBox">
             <img src="./10.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
