--- a/seer/index.html
+++ b/seer/index.html
@@ -71,7 +71,8 @@
     rel="stylesheet">
   <!--font awesome -->
 
-
+  <link href="https://fonts.cdnfonts.com/css/jua" rel="stylesheet">
+  <!--font Jua -->
 
 
 
