--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
-
-
-
+ 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <!--font font-family: Maven Pro; -->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
@@ -197,13 +199,14 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
-        </button></a>
+        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
+            &nbsp;
+          </button></a>
 
         <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
-        </button></a>
+          </button></a>
       </div>
-    </div> 
+    </div>
   </div>
   <!--intro-->
   <div class="blankHS"></div>
