--- a/appointa/index.html
+++ b/appointa/index.html
@@ -75,6 +75,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
+  <!--font font-family: 'Indie Flower'; -->
 
 
 
