--- a/seer/index.html
+++ b/seer/index.html
@@ -71,8 +71,15 @@
     rel="stylesheet">
   <!--font awesome -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+  <!--font font-family: 'Indie Flower'; -->
+
   <link href="https://fonts.cdnfonts.com/css/jua" rel="stylesheet">
   <!--font Jua -->
+
 
 
 
