media query background image

--- a/appointa/index.html
+++ b/appointa/index.html
@@ -172,7 +172,7 @@
   <div class="colorBgAPPOINTA">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayNonePhone">
+    <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
       <img class="" src="Mockup.png" alt="APPOINTA">
 
@@ -182,14 +182,21 @@
       </div>
     </div>
 
-    <div class="ProjectBanner displayNoneDesktop">
+    <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
-      <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
+      <img class="displayTablet" src="MockupS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
           target="_blank"> <button class="button-35">Slide Decks</button></a>
       </div>
-
+    </div>
+    <div class="ProjectBanner displayPhone">
+      <div class="blankMin1880"></div>
+      <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
+      <div class="ProjectBannerInner">
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+          target="_blank"> <button class="button-35">Slide Decks</button></a>
+      </div>
     </div>
   </div>
   <div class="blankHXS"></div>
@@ -1860,7 +1867,7 @@
               <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
                 <h4>
 
-     
+
                   <p> <strong>Updated mid-fi screens based on the feedback from testing</strong></p>
                   <ul>
                     <li> Allow user to select multiple interviewer</li>
