remove scroll trigger

--- a/appointa/index.html
+++ b/appointa/index.html
@@ -188,6 +188,8 @@
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
           target="_blank"> <button class="button-35">Slide Decks</button></a>
+          <div class="blankHXS"></div>
+
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
@@ -196,6 +198,8 @@
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
           target="_blank"> <button class="button-35">Slide Decks</button></a>
+          <div class="blankHXS"></div>
+
       </div>
     </div>
   </div>
