--- a/photography/index.html
+++ b/photography/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -85,6 +85,8 @@
   <script type="text/javascript"
     src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
+
+  
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
@@ -96,12 +98,13 @@
   <!-- gsap - tool-bar-->
 
   <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -186,7 +189,7 @@
         <div class="element">
           <div class="Grid">
             <p class="tArrow"> Selected Photos</p>
-            <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
