--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
 
+  <script type="text/javascript" src="scripts_testing.js"></script>
+
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -80,10 +82,10 @@
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
- 
   <script type="text/javascript"
     src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
+
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
@@ -94,11 +96,6 @@
     src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <script>
@@ -120,8 +117,7 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
-    <div class="backgroundColorNav">
+  <nav class="header" id="header">
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -143,9 +139,9 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
-    </div>
   </nav>
   <!-- header -->
+    
   <div class="blankHM"></div>
 
 
