--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,6 @@
 
   <link rel="stylesheet" href="../main.css" />
   <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="scripts_about.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
@@ -141,9 +140,8 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+  <nav class="header" id="header">
+    <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -163,7 +161,6 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
-    </div>
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
