--- a/architecture/index.html
+++ b/architecture/index.html
@@ -43,7 +43,6 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
 
   <link
@@ -119,9 +118,8 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
-    <div class="backgroundColorNav">
-
+  <nav class="header" id="header">
+ 
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
@@ -144,8 +142,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
-    </div>
-
+ 
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
