--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
 
-  <script type="text/javascript" src="scripts_testing.js"></script>
 
 
   <link
@@ -89,15 +88,12 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
+ 
 
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+      <!-- google analytics-->
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
