--- a/photography/index.html
+++ b/photography/index.html
@@ -90,20 +90,9 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
-
-  <script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+    <!-- google analytics-->
+
   
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -125,9 +114,8 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+  <nav class="header" id="header">
+    <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -148,8 +136,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
-    </div>
-  </nav>
+   </nav>
   <!-- header -->
 
   <div class="blankHM"></div>
