--- a/about/index.html
+++ b/about/index.html
@@ -140,8 +140,12 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+  
+  <nav class="header"  id="header">
+    <div class="backgroundColorNav">
+
+
+      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -161,6 +165,8 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
+    </div>
+
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
