--- a/architecture/index.html
+++ b/architecture/index.html
@@ -85,21 +85,12 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
-
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
+ 
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <script>
+     <!-- google analytics-->
+
+ <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
