--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
+  <nav class="header headerBG" id="header">
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
