--- a/architecture/index.html
+++ b/architecture/index.html
@@ -110,7 +110,8 @@
   <!--progressBarScroll-->
   <!-- header -->
   <nav class="header" id="header">
- 
+    <div class="backgroundColorNav">
+
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
@@ -133,7 +134,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
- 
+    </div>
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
