--- a/seer/index.html
+++ b/seer/index.html
@@ -44,7 +44,6 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -94,19 +93,7 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
-
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-
+ 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -133,7 +120,7 @@
   <!--progressBarScroll-->
 
   <!-- header -->
-  <nav class="header">
+  <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/" class="logo pointer colorSEER">VW
       </a>
