--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header headerBG" id="header">
+  <nav class="header" id="header">
+    <div class="backgroundColorNav">
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -134,7 +135,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-      </div>
+      </div></div>
   </nav>
   <!-- header -->
     
