--- a/photography/index.html
+++ b/photography/index.html
@@ -115,6 +115,8 @@
   <!--progressBarScroll-->
   <!-- header -->
   <nav class="header" id="header">
+    <div class="backgroundColorNav">
+
     <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
 
       <div class="navbar">
@@ -135,7 +137,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-      </div>
+      </div></div>
    </nav>
   <!-- header -->
 
